--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -14,6 +14,7 @@ body {
   position: relative;
   font-family: 'Source Sans Pro';
   font-weight: 300;
+  background-image: url("../img/studio.jpg");
 }
 
 h1,
@@ -41,7 +42,7 @@ video {
 
 @media (pointer: coarse) and (hover: none) {
   body {
-    background: url("../img/bg-mobile-fallback.jpg") #002E66 no-repeat center center scroll;
+    background: url("../img/studio.jpg") #002E66 no-repeat center center scroll;
     background-position: cover;
   }
   body video {
@@ -55,7 +56,7 @@ video {
   left: 0;
   height: 100%;
   width: 100%;
-  background-color: #cd9557;
+  /*background-color: #cd9557;*/
   opacity: 0.7;
   z-index: 1;
 }
