--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -15,6 +15,8 @@ body {
   font-family: 'Source Sans Pro';
   font-weight: 300;
   background-image: url("../img/studio.jpg");
+  background-size: 100%;
+  background-position: bottom;
 }
 
 h1,
