--- a/css/coming-soon.css
+++ b/css/coming-soon.css
@@ -215,3 +215,35 @@ video {
 .input {
   font-weight: 300 !important;
 }
+
+button {
+color: #20bf6b !important;
+text-transform: uppercase;
+background: #ffffff;
+padding: 20px;
+border: 4px solid #20bf6b !important;
+border-radius: 6px;
+display: inline-block;
+transition: all 0.3s ease 0s;
+font-weight: bold;
+}
+
+button:hover, .fb-share-btn:hover  {
+color: #494949 !important;
+border-radius: 50px;
+border-color: #494949 !important;
+transition: all 0.3s ease 0s;
+cursor: pointer;
+}
+
+.fb-share-btn{
+    color: #3b5998 !important; 
+background-color: #ffffff;
+text-transform: uppercase;
+padding: 20px;
+border: 4px solid  #3b5998 !important;
+border-radius: 6px;
+display: inline-block;
+transition: all 0.3s ease 0s;
+font-weight: bold;
+}
